# ATM-group-project

./: .gitignore  00_globals.conf  README.md  Taskit_ryhmä4.xlsx  docker-compose.yml
backend/: Dockerfile  app.js  package-lock.json  package.json
backend/src/: create_secret.js  db.js  server.js
backend/src/middleware/: authenticateToken.js
backend/src/models/: asiakasModel.js  authModel.js  korttiModel.js  tili_models.js  transaktio_models.js
backend/src/routes/: asiakasRoutes.js  authRoutes.js  korttiRoutes.js  tiliRoutes.js  transaktioRoutes.js
bank-automat/: enviroment.h  mainwindow.h  mainwindow.ui
frontend/: .gitignore  CMakeLists.txt  config.h  creditwindow.cpp  creditwindow.h  creditwindow.ui  debitwindow.cpp  debitwindow.h  debitwindow.ui  enviroment.cpp  environment.cpp  environment.h  idlemanager.cpp  idlemanager.h  kortinvalintawindow.cpp  kortinvalintawindow.h  kortinvalintawindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nostodebit.cpp  nostodebit.h  nostodebit.ui  taustakuvalogin.qrc  tilitapahtumatwindow.cpp  tilitapahtumatwindow.h  tilitapahtumatwindow.ui
mysql/: init.sql
nginx/: 00_globals.conf  _default_off.conf  api.conf  init.sql
scripts/: config.sh  down.sh  health.sh  health_all.sh  logs.sh  port_check.sh  reload_nginx.sh  reset_db.sh  up.sh
